--- a/src/main/resources/templates/iteration2Greet.html
+++ b/src/main/resources/templates/iteration2Greet.html
@@ -22,7 +22,7 @@
 
             <div class="row align-self-center pl-3">
                 <form th:action="@{/Iter2Add}" method="POST">
-                    <input type="hidden" th:field="*{customer.id}"/>
+                    <input type="hidden" th:field="*{user.id}"/>
                     <button id="greetBtn" type="submit" class="btn mt-4">
                         Now greet me!
                     </button>
