--- a/src/main/resources/templates/add-user.html
+++ b/src/main/resources/templates/add-user.html
@@ -10,7 +10,7 @@
 <div class="container">
     <h2>Add Customer</h2>
     <hr/>
-    <form th:action="@{/add}" th:object="${customer}" method="POST">
+    <form th:action="@{/add}" th:object="${user}" method="POST">
         <input type="text" th:field="*{firstName}" placeholder="Enter First Name"/>
         <input type="text" th:field="*{lastName}" placeholder="Enter Last Name"/>
 
