--- a/src/main/resources/templates/iteration3.html
+++ b/src/main/resources/templates/iteration3.html
@@ -37,13 +37,13 @@
                         </button>
                     </th>
                     <tb>
-                        <tr th:each="customer: ${customers}">
-                            <td th:text="${customer.firstName}"></td>
-                            <td th:text="${customer.lastName}"></td>
+                        <tr th:each="user: ${users}">
+                            <td th:text="${user.firstName}"></td>
+                            <td th:text="${user.lastName}"></td>
                             <td>
                                 <button id="editBtn" class="btn btn-info mx-5" data-toggle="modal"
-                                        th:data-user-id="${customer.id}"
-                                        th:onclick="'javascript:updateCustomer(\''+ ${customer.id} +'\')'"
+                                        th:data-user-id="${user.id}"
+                                        th:onclick="'javascript:updateUser(\''+ ${user.id} +'\')'"
                                         data-target="#exampleModal">
                                     Edit
                                 </button>
@@ -59,7 +59,7 @@
                 <h4>Update Customer</h4>
                 <form th:action="@{/update}" method="POST">
                     <div>
-                        <label for="id">ID of customer being updated:</label>
+                        <label for="id">ID of user being updated:</label>
                         <input name="id" id="id">
                     </div>
                     <div>
@@ -70,7 +70,7 @@
                         <label for="lastName">Update last name:</label>
                         <input name="newLast" id="lastName">
                     </div>
-                    <button btn bt-primary>update customer</button>
+                    <button btn bt-primary>update user</button>
 
                 </form>
             </div>
@@ -88,7 +88,7 @@
                             </div>
                             <div class="modal-body">
 
-                                <input name="id" id="selectedCustomerId" type="hidden">
+                                <input name="id" id="selectedUserId" type="hidden">
                                 <row><label for="firstName">Update First Name:</label>
                                     <input name="newFirst" id="firstName"></row>
                                 <row><label for="lastName">Update Last Name:</label>
@@ -96,7 +96,7 @@
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                <button type="submit" id="updateCustomerBtn" class="btn btn-primary"> Update
+                                <button type="submit" id="updateUserBtn" class="btn btn-primary"> Update
                                 </button>
                             </div>
                         </form>
@@ -108,7 +108,7 @@
             <div class="modal fade" id="addUserModal" tabindex="-1" role="dialog" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered" role="document">
                     <div class="modal-content">
-                        <form id="addUserForm" th:object="${customer}" th:action="@{/iter3Add}" method="POST">
+                        <form id="addUserForm" th:object="${user}" th:action="@{/iter3Add}" method="POST">
                             <div class="modal-header">
                                 <h5 class="modal-title" id="addUserModalLongTitle">Add User</h5>
                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -168,7 +168,7 @@
                         <p>
                             Although table above will be updated with this iteration too since database is shared
                             between the iterations, update
-                            after clearing the db is not handled due to the fact that ids are sequentially generated and
+                            after clearing the db is not handled properly due to the fact that ids are sequentially generated and
                             are not meant to be reset with the deletion of the records.
                         </p>
                         <div class="row">
@@ -203,9 +203,9 @@
 </script>
 
 <script type="text/javascript">
-function updateCustomer(id) {
-            <!--alert("Updating Customer with ID " + id);-->
-            document.getElementById("selectedCustomerId").value = id;
+function updateUser(id) {
+            <!--alert("Updating User with ID " + id);-->
+            document.getElementById("selectedUserId").value = id;
 }
 
 
